# stock_cast_predictor

./: .dockerignore  Dockerfile  GEMINI.md  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
config/: prediction_config.py
models/: stock.py
predict/: seperate.py  unified.py
routes/: predict.py
services/: prediction_service.py  validation_service.py
utils/: artifacts.py  format.py  preprocessing.py  seperate_artifacts.py  transform.py  unified_artifacts.py
