[project]
name = "api-seperate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.103.1",
    "huggingface-hub>=0.17.3",
    "joblib>=1.3.2",
    "numpy>=1.24.0",
    "pydantic>=2.3.0",
    "python-dateutil>=2.8.2",
    "scikit-learn>=1.3.0",
    "tensorflow-cpu>=2.13.0",
    "uvicorn>=0.23.2",
]
